; ModuleID = '/home/carl/AnghaBench/openssl/crypto/cms/extr_cms_asn1.c_cms_cb.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/cms/extr_cms_asn1.c_cms_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32**, i32*, i8*)* @cms_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cms_cb(i32 %0, i32** %1, i32* %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32**, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca %struct.TYPE_2__*, align 8
  %11 = alloca i32*, align 8
  store i32 %0, i32* %6, align 4
  store i32** %1, i32*** %7, align 8
  store i32* %2, i32** %8, align 8
  store i8* %3, i8** %9, align 8
  %12 = load i8*, i8** %9, align 8
  %13 = bitcast i8* %12 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %13, %struct.TYPE_2__** %10, align 8
  store i32* null, i32** %11, align 8
  %14 = load i32**, i32*** %7, align 8
  %15 = icmp ne i32** %14, null
  br i1 %15, label %16, label %19

16:                                               ; preds = %4
  %17 = load i32**, i32*** %7, align 8
  %18 = load i32*, i32** %17, align 8
  store i32* %18, i32** %11, align 8
  br label %20

19:                                               ; preds = %4
  store i32 1, i32* %5, align 4
  br label %54

20:                                               ; preds = %16
  %21 = load i32, i32* %6, align 4
  switch i32 %21, label %53 [
    i32 128, label %22
    i32 130, label %30
    i32 129, label %44
    i32 131, label %44
  ]

22:                                               ; preds = %20
  %23 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 2
  %25 = load i32*, i32** %11, align 8
  %26 = call i32 @CMS_stream(i32* %24, i32* %25)
  %27 = icmp sle i32 %26, 0
  br i1 %27, label %28, label %29

28:                                               ; preds = %22
  store i32 0, i32* %5, align 4
  br label %54

29:                                               ; preds = %22
  br label %30

30:                                               ; preds = %20, %29
  %31 = load i32*, i32** %11, align 8
  %32 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %33 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %32, i32 0, i32 1
  %34 = load i32, i32* %33, align 4
  %35 = call i32 @CMS_dataInit(i32* %31, i32 %34)
  %36 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %37 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %36, i32 0, i32 0
  store i32 %35, i32* %37, align 4
  %38 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %39 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %38, i32 0, i32 0
  %40 = load i32, i32* %39, align 4
  %41 = icmp ne i32 %40, 0
  br i1 %41, label %43, label %42

42:                                               ; preds = %30
  store i32 0, i32* %5, align 4
  br label %54

43:                                               ; preds = %30
  br label %53

44:                                               ; preds = %20, %20
  %45 = load i32*, i32** %11, align 8
  %46 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %47 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %46, i32 0, i32 0
  %48 = load i32, i32* %47, align 4
  %49 = call i32 @CMS_dataFinal(i32* %45, i32 %48)
  %50 = icmp sle i32 %49, 0
  br i1 %50, label %51, label %52

51:                                               ; preds = %44
  store i32 0, i32* %5, align 4
  br label %54

52:                                               ; preds = %44
  br label %53

53:                                               ; preds = %20, %52, %43
  store i32 1, i32* %5, align 4
  br label %54

54:                                               ; preds = %53, %51, %42, %28, %19
  %55 = load i32, i32* %5, align 4
  ret i32 %55
}

declare dso_local i32 @CMS_stream(i32*, i32*) #1

declare dso_local i32 @CMS_dataInit(i32*, i32) #1

declare dso_local i32 @CMS_dataFinal(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
